invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_42.src
.IPPcode24
GT GF@e int bool@false